--- a/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
@@ -4,13 +4,13 @@
              x:Class="ArticlesApp.Views.LogInPage"
              BackgroundColor="#F8FBFF">
     <ContentPage.Resources>
-        <StyleSheet Source=""/>
+        <StyleSheet Source="/Styles/First.css"/>
     </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
             <Image Source="Logo.png"   />
-            <Frame >
-                <Entry BackgroundColor="White" Placeholder="Email"/>
+            <Frame StyleClass="frame" >
+                <Entry  Placeholder="Email"/>
             </Frame>
         </StackLayout>
     </ContentPage.Content>
