--- a/ArticlesApp/ArticlesApp/Styles/First.css
+++ b/ArticlesApp/ArticlesApp/Styles/First.css
@@ -1,10 +1,14 @@
-﻿Frame {
-    width: 319px;
-    height: 53px;
-    margin-left: 21px;
-    margin-top: 301px;
+﻿.Logo {
+    
+}
+Frame {
     background-color: white;
-    /*border: 1px solid rgba(0, 0, 0, 0.51);
-    box-sizing: border-box;
-    border-radius: 30px;*/
+    border: 1px;
+    border-color: rgba(0, 0, 0, 0.51);
+    border-radius: 30;
+    
+    
+}
+.Entry {
+   
 }
