--- a/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
@@ -27,7 +27,7 @@
             <StackLayout Spacing="0" Padding="0,0">
                 <BoxView HeightRequest="1" BackgroundColor="Black" VerticalOptions="EndAndExpand" />
 
-                <Button BackgroundColor="#F8FBFF" StyleClass="bt" Text="Press to create acount" TextColor="#2934D0" 
+                <Button BackgroundColor="#F8FBFF"  Text="Press to create acount" TextColor="#2934D0" 
                     FontFamily="Rubik" FontSize="14" HeightRequest="61" VerticalOptions="Center" HorizontalOptions="CenterAndExpand"/>
             </StackLayout>
         </StackLayout>
