--- a/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
@@ -4,7 +4,8 @@
              x:Class="ArticlesApp.Views.LogInPage"
              xmlns:local="clr-namespace:ArticlesApp;assembly=ArticlesApp"
              xmlns:datepicker="clr-namespace:ArticlesApp.Renderer" 
-             BackgroundColor="#F8FBFF">
+             BackgroundColor="#F8FBFF"
+             NavigationPage.HasNavigationBar="false">
     <ContentPage.Resources>
         <StyleSheet Source="/Styles/First.css"/>
         <Style TargetType="local:MyEntry" x:Key="Entry">
@@ -13,21 +14,21 @@
         </Style>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <StackLayout Spacing="20" Padding="10,25,10,0" >
-            <StackLayout></StackLayout>
-            <Image Source="Logo.png"  StyleClass="Logo"  />
+        <StackLayout Spacing="25" >
+            <StackLayout Spacing="20" Padding="10,20,10,0">
+                <Image Source="Logo.png"  StyleClass="Logo"  />
             <Frame  >
                 <local:MyEntry Placeholder="Email"  Style="{StaticResource Entry}"  />
             </Frame>
             <Frame  >
                 <local:MyEntry Placeholder="Password"  Style="{StaticResource Entry}"  />
             </Frame>
-            <Button BackgroundColor="#2934D0" CornerRadius="30" Text="Next" TextColor="White" FontFamily="Rubik" FontSize="14" 
+            <Button Command="{Binding LogInCommand}" BackgroundColor="#2934D0" CornerRadius="30" Text="Log In" TextColor="White" FontFamily="Rubik" FontSize="14" 
                     HeightRequest="55" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" WidthRequest="380"/>
-            <StackLayout Spacing="0" Padding="0,0">
+            </StackLayout>
+            <StackLayout Spacing="0" Padding="0,35">
                 <BoxView HeightRequest="1" BackgroundColor="Black" VerticalOptions="EndAndExpand" />
-
-                <Button BackgroundColor="#F8FBFF"  Text="Press to create acount" TextColor="#2934D0" 
+                <Button Command="{Binding SignInCommand}" BackgroundColor="#F8FBFF"  Text="Press to create acount" TextColor="#2934D0" 
                     FontFamily="Rubik" FontSize="14" HeightRequest="61" VerticalOptions="Center" HorizontalOptions="CenterAndExpand"/>
             </StackLayout>
         </StackLayout>
