--- a/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
@@ -10,23 +10,49 @@
         <StyleSheet Source="/Styles/First.css"/>
         <Style TargetType="local:MyEntry" x:Key="Entry">
             <Setter Property="PlaceholderColor" Value="{Binding border}"/>
-            <Setter Property="HeightRequest" Value="25"/>
+            
         </Style>
     </ContentPage.Resources>
     <ContentPage.Content>
-        <StackLayout Spacing="25" >
-            <StackLayout Spacing="20" Padding="10,20,10,0">
+        <StackLayout Spacing="2" >
+            <StackLayout Spacing="0" Padding="5,10,10,0">
                 <Image Source="Logo.png"  StyleClass="Logo"  />
-            <Frame  >
-                <local:MyEntry Placeholder="Email"  Style="{StaticResource Entry}"  />
-            </Frame>
-            <Frame  >
-                <local:MyEntry Placeholder="Password"  Style="{StaticResource Entry}"  />
-            </Frame>
-            <Button Command="{Binding LogInCommand}" BackgroundColor="#2934D0" CornerRadius="30" Text="Log In" TextColor="White" FontFamily="Rubik" FontSize="14" 
-                    HeightRequest="55" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" WidthRequest="380"/>
+                <Grid HeightRequest="60" Padding="5,10,0,10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="60" />
+                        <RowDefinition Height="20"/>
+                    </Grid.RowDefinitions>
+                    <Frame Grid.Row="0" BorderColor="{Binding EmailBorderColor}" >
+                        <local:MyEntry Placeholder="Email" Text="{Binding Email}" Style="{StaticResource Entry}"   />
+                    </Frame>
+                    <Label Text="Enter email" TextColor="Red" Grid.Row="1" IsVisible="{Binding IsEmailErorrVisible}"/>
+                </Grid>
+                <Grid HeightRequest="60" Padding="5,25,0,35">
+                    <Grid.ColumnDefinitions >
+                        <ColumnDefinition Width="*" />
+                       
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="60" />
+                        <RowDefinition Height="20"/>
+                    </Grid.RowDefinitions>
+                    <Frame Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" BorderColor="{Binding PasswordBorderColor}">
+                        <local:MyEntry Placeholder="Password" Text="{Binding Password}" Style="{StaticResource Entry}"  />
+                    </Frame>
+                    <Label Text="Enter Password" TextColor="Red" Grid.Row="1" IsVisible="{Binding IsPasswordErorrVisible}" />
+                    
+                </Grid>
+               
+
+                <Button Padding="0,0,0,0" Command="{Binding LogInCommand}" BackgroundColor="#2934D0" CornerRadius="30" Text="Log In" TextColor="White" FontFamily="Rubik" FontSize="14" 
+                    HeightRequest="52" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" WidthRequest="380"/>
+                <Button  BackgroundColor="#F8FBFF"  Text="Forgot password" TextColor="#2934D0" FontSize="14" IsVisible="true"
+                            />
             </StackLayout>
-            <StackLayout Spacing="0" Padding="0,35">
+            <StackLayout Spacing="0" Padding="0,17">
                 <BoxView HeightRequest="1" BackgroundColor="Black" VerticalOptions="EndAndExpand" />
                 <Button Command="{Binding SignInCommand}" BackgroundColor="#F8FBFF"  Text="Press to create acount" TextColor="#2934D0" 
                     FontFamily="Rubik" FontSize="14" HeightRequest="61" VerticalOptions="Center" HorizontalOptions="CenterAndExpand"/>
