--- a/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/LogInPage.xaml
@@ -30,10 +30,10 @@
                     </Frame>
                     <Label Text="Enter email" TextColor="Red" Grid.Row="1" IsVisible="{Binding IsEmailErorrVisible}"/>
                 </Grid>
+                
                 <Grid HeightRequest="60" Padding="5,25,0,35">
                     <Grid.ColumnDefinitions >
                         <ColumnDefinition Width="*" />
-                       
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="60" />
@@ -43,15 +43,14 @@
                         <local:MyEntry Placeholder="Password" Text="{Binding Password}" Style="{StaticResource Entry}"  />
                     </Frame>
                     <Label Text="Enter Password" TextColor="Red" Grid.Row="1" IsVisible="{Binding IsPasswordErorrVisible}" />
-                    
                 </Grid>
-               
 
                 <Button Padding="0,0,0,0" Command="{Binding LogInCommand}" BackgroundColor="#2934D0" CornerRadius="30" Text="Log In" TextColor="White" FontFamily="Rubik" FontSize="14" 
                     HeightRequest="52" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" WidthRequest="380"/>
-                <Button  BackgroundColor="#F8FBFF"  Text="Forgot password" TextColor="#2934D0" FontSize="14" IsVisible="true"
-                            />
+                
+                <Button  BackgroundColor="#F8FBFF"  Text="Forgot password" TextColor="#2934D0" FontSize="14"  />
             </StackLayout>
+            
             <StackLayout Spacing="0" Padding="0,17">
                 <BoxView HeightRequest="1" BackgroundColor="Black" VerticalOptions="EndAndExpand" />
                 <Button Command="{Binding SignInCommand}" BackgroundColor="#F8FBFF"  Text="Press to create acount" TextColor="#2934D0" 
