Add model classes

--- a/ArticlesApp/ArticlesApp/Views/ForgotPasswordEnterEmail.xaml
+++ b/ArticlesApp/ArticlesApp/Views/ForgotPasswordEnterEmail.xaml
@@ -1,12 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ArticlesApp.Views.ForgotPasswordEnterEmail">
+             x:Class="ArticlesApp.Views.ForgotPasswordEnterEmail"
+              xmlns:local="clr-namespace:ArticlesApp;assembly=ArticlesApp"
+             xmlns:datepicker="clr-namespace:ArticlesApp.Renderer" >
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="To change your password enter your Email"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            <local:MyEntry Text="{Binding Email}"/>
+            <Label Text="Enter an excitten email"/>
+            <Button Padding="0,0,0,0" Command="{Binding LogInCommand}" BackgroundColor="#2934D0" CornerRadius="30" Text="Log In" TextColor="White" FontFamily="Rubik" FontSize="14" 
+                    HeightRequest="52" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" WidthRequest="380"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
