--- a/ArticlesApp/ArticlesApp/Views/ForgotPasswordEnterEmail.xaml
+++ b/ArticlesApp/ArticlesApp/Views/ForgotPasswordEnterEmail.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ArticlesApp.Views.ForgotPasswordEnterEmail"
-              xmlns:local="clr-namespace:ArticlesApp;assembly=ArticlesApp"
+             xmlns:local="clr-namespace:ArticlesApp.Renderer"
              xmlns:datepicker="clr-namespace:ArticlesApp.Renderer" >
     <ContentPage.Content>
         <StackLayout>
