--- a/ArticlesApp/ArticlesApp/Views/SignIn.xaml
+++ b/ArticlesApp/ArticlesApp/Views/SignIn.xaml
@@ -34,7 +34,7 @@
                         <Label Text="{x:Static fontawesome:FontAwesomeIcons.User}" 
                  FontSize="24" TextColor="Black"
                         FontFamily="{StaticResource FontAwesomeRegular }"  />
-                        <local:MyEntry Placeholder="User Name" Text="{Binding UserName}" Unfocused="UserName_Unfocused" />
+                        <local:MyEntry Placeholder="User Name" Text="{Binding UserName}" Unfocused="UserName_Unfocused" WidthRequest="300"/>
                     </StackLayout>
                 </Frame>
                 <Label Text="{Binding UserNameError}" TextColor="Red" FontSize="13" Padding="24,0,0,0"/>
@@ -45,19 +45,26 @@
                         <Label Text="{x:Static fontawesome:FontAwesomeIcons.AddressCard}" 
                  FontSize="24" TextColor="Black"
                         FontFamily="{StaticResource FontAwesomeRegular }" VerticalOptions="Center" />
-                        <local:MyEntry  Placeholder="Full Name" HorizontalOptions="StartAndExpand" Unfocused="FullName_Unfocused" Text="{Binding FullName}"/>
+                        <local:MyEntry  Placeholder="Full Name" HorizontalOptions="StartAndExpand" WidthRequest="300" Unfocused="FullName_Unfocused" Text="{Binding FullName}"/>
                     </StackLayout>
                 </Frame>
                 <Label Text="{Binding FullNameError}" TextColor="Red" FontSize="13" Padding="24,0,0,0"/>
             </StackLayout>
             <StackLayout>
-                <Frame CornerRadius="37" BorderColor="{Binding bordercolor}">
-                    <StackLayout Orientation="Horizontal" HeightRequest="22">
+
+                <Frame CornerRadius="37" BorderColor="Black"  Padding="24,0,0,0" >
+                    <Grid HeightRequest="59"  >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="25" />
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
                         <Label Text="{x:Static fontawesome:FontAwesomeIcons.BirthdayCake}" 
-                 FontSize="24" TextColor="Black"
-                        FontFamily="{StaticResource FontAwesomeSolid }" VerticalOptions="Center" />
-                        <local:ExtendedDatePicker Date="{Binding BirthDate}" HorizontalOptions="StartAndExpand" />
-                    </StackLayout>
+                 FontSize="24" TextColor="Black"          Grid.Column="0" Grid.Row="0"     FontFamily="{StaticResource FontAwesomeSolid }" VerticalOptions="Center" />
+                        <local:ExtendedDatePicker Date="{Binding BirthDate}" Grid.Column="1"  Grid.Row="0" TextColor="{Binding BirthDateTextColor}"  HorizontalOptions="StartAndExpand"  VerticalOptions="Center" WidthRequest="300" HeightRequest="50"   />
+                    </Grid>
                 </Frame>
                 <Label Text="{Binding EmailError}" TextColor="Red" FontSize="13" Padding="24,0,0,0"/>
             </StackLayout>
